Add active device listing
